# news_feed

./: README.md  docker-compose.yml  makefile
backend/: .env  Dockerfile  README.md  db.sqlite3  example.env  pyproject.toml
backend/backend/: settings.py  urls.py
backend/newsroom/: admin.py  apps.py  models.py  urls.py
backend/newsroom/data/: __init__.py  news_repository.py  source_repository.py  user_repository.py
backend/newsroom/jobs/: __init__.py  sync_news.py  sync_sources.py
backend/newsroom/migrations/: 0001_initial.py  0002_news_source.py  0003_news_country_code_news_source_id_source_country_code_and_more.py  0004_alter_news_source_id_alter_news_source_name_and_more.py  0005_rename_thumbnail_news_thumbnail_url_and_more.py  0006_alter_source_name.py  0007_alter_news_source_id.py  0008_rename_source_url_news_news_url_and_more.py  0009_alter_news_title.py  0010_alter_news_thumbnail_url_alter_news_title.py  0011_rename_countries_user_country_codes_and_more.py  0012_alter_user_email.py
backend/newsroom/schemas/: __init__.py  news.py  source.py  user.py
backend/newsroom/tests/: __init__.py  test_source.py  test_user.py
backend/newsroom/utils/: __init__.py  auth_decorator.py  user_form.py
backend/newsroom/views/: __init__.py  auth_view.py  code_view.py  news_view.py  source_view.py  user_view.py
frontend/: Dockerfile  README.md  app.vue  example.env  nuxt.config.ts  package-lock.json  package.json  tailwind_cheatsheet.md
frontend/components/: AppCard.vue  AuthenticationForm.vue  ComboInput.vue  Pill.vue  SourceCombobox.vue  TopBar.vue  UserModal.vue
(+16 files in other folders)
